package dev.mr3.sb.controller;

import org.springframework.stereotype.Controller;

@Controller
public class AppointmentController {
}
