package dev.mr3.sb.model;

public  class Report  {
    private final Patient user;
    private final Injury injury;
    private final Treatment treatment;
    private final Appointment appointment;
    private final Sport sport;

    // Constructor
    public Report(Patient user, Injury injury, Treatment treatment, Appointment appointment, Sport sport) {
        this.user = user;
        this.injury = injury;
        this.treatment = treatment;
        this.appointment = appointment;
        this.sport = sport;
    }

    // Non-abstract method for shared functionality
    public void generateReport() {
        System.out.println("\n=== Report ===");
        System.out.println("User Information:");
        System.out.println("Name: " + user.getName());
        System.out.println("Age: " + user.getAge());
        System.out.println("Gender: " + (user.isGender() ? "Male" : "Female"));
        System.out.println("Contact Number: " + user.getContact_no());
        System.out.println("Injury Details:");
        injury.displayInjuryDetails();
        System.out.println("Treatment Details: " + treatment.getTreatmentSuggestion());
        System.out.println("Appointment Details: " + appointment.getWeekday() + " " + appointment.getTime());
        System.out.println("Sport Played: " + sport.getName());

        // Custom report details are generated by subclasses
        //generateCustomReport();
    }
    
    // Getters for the fields if needed in subclasses
}