package dev.mr3.sb.repository;

public interface DoctorRepository {
}
