package dev.mr3.sb.repository;

public class InjuryRepository {
}
