package dev.mr3.sb.service;

import org.springframework.stereotype.Service;

@Service
public class AuthService {
}
