package dev.mr3.sb.service;

public class InjuryService {
}
